# kernel-ml

./: .codecov.yml  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
.circleci/: config.yml
benchmark/: bench_math.cpp  bench_matrix.cpp
cmake/: FindKernelHeaders.cmake
examples/: decision_tree_example.c  linear_regression.c  nfs_net_classification.c  readahead_net.c  readahead_net_classification.c  readahead_net_classification_training.c  xor_net.c
include/: autodiff.h  binary_cross_entropy_loss.h  cross_entropy_loss.h  decision_tree.h  kml_file.h  kml_lib.h  kml_math.h  kml_memory_allocator.h  kml_types.h  layers.h  linear.h  linear_algebra.h  linear_regression.h  loss.h  matrix.h  model.h  multithreading.h  nfs_net_classification.h  nfs_net_data.h  readahead_net.h  readahead_net_classification.h  readahead_net_data.h  sgd_optimizer.h  sigmoid.h  square_loss.h  utility.h  xor_net.h
include/kernel-interfaces/: io_scheduler_linear.h  nfs.h  readahead.h
kernel-interfaces/: io_scheduler_linear.c
kernel-interfaces/nfs/: Makefile  kml-nfs.c
kernel-interfaces/readahead/: readahead.c
kernel-interfaces/readahead-training/: Makefile  readahead.c
ml-models-analyses/generate-results/: generate-result-kml.sh  generate-result-vanilla.sh  generate_graphs.sh  parse_experiments.py  plot_nvme_vs_ssd.py  plot_timeline_from_csv.py  result-kml.sh  result-vanilla.sh
ml-models-analyses/nfs-data-collection/: benchmark-kml.sh  benchmark.sh  clear_dataset.sh  generate-benchmark-data.sh  generate-result-kml.sh  generate-result-vanilla.sh  generate-training-data.sh
ml-models-analyses/nfs-data-collection/nn_arch_data/: linear0_bias.csv  linear0_w.csv  linear1_bias.csv  linear1_w.csv  linear2_bias.csv  linear2_w.csv  linear3_bias.csv  linear3_w.csv  mean.csv  stddev.csv
ml-models-analyses/readahead-data-collection/: benchmark-training-phase.sh  benchmark.sh  clear_dataset.sh  generate-benchmark-data.sh  generate-training-data.sh  generate-training-phase.sh  multiple_db_bench.sh  tracing.sh  tracing_multiple.sh
ml-models-analyses/readahead-mixed-workload/: clear-dataset.sh  create-databases.sh  generate-result-kml-allcombos.sh  generate-result-kml.sh  generate-result-vanilla-allcombos.sh  generate-result-vanilla.sh  generate-result.sh  iterate-combos.sh  kill-test.sh  kmlparsing.py  parse-experiments-with-faults.py  parse-experiments.py  parse-faults.py  plot_nvme_vs_ssd.py  run-bench.sh  run-workload.sh  single-workload-kml.sh  single-workload-vanilla.sh  spawn-workloads-kml.sh  spawn-workloads-vanilla.sh  spawn-workloads.sh  ultimate-graph-ops-sec.py
ml-models-analyses/readahead-per-disk/decision_tree_example/: readahead_model.dt
ml-models-analyses/readahead-per-disk/decision_tree_model/: readahead_model.dt
ml-models-analyses/readahead-per-disk/feature_results/: feature_final_readrandomwriterandom_1.csv  feature_final_readrandomwriterandom_1024.csv  feature_final_readrandomwriterandom_128.csv  feature_final_readrandomwriterandom_160.csv  feature_final_readrandomwriterandom_192.csv  feature_final_readrandomwriterandom_224.csv  feature_final_readrandomwriterandom_256.csv  feature_final_readrandomwriterandom_288.csv  feature_final_readrandomwriterandom_32.csv  feature_final_readrandomwriterandom_320.csv  feature_final_readrandomwriterandom_352.csv  feature_final_readrandomwriterandom_384.csv  feature_final_readrandomwriterandom_416.csv  feature_final_readrandomwriterandom_448.csv  feature_final_readrandomwriterandom_480.csv  feature_final_readrandomwriterandom_512.csv  feature_final_readrandomwriterandom_544.csv  feature_final_readrandomwriterandom_576.csv  feature_final_readrandomwriterandom_608.csv  feature_final_readrandomwriterandom_64.csv  feature_final_readrandomwriterandom_640.csv  feature_final_readrandomwriterandom_672.csv  feature_final_readrandomwriterandom_704.csv  feature_final_readrandomwriterandom_736.csv  feature_final_readrandomwriterandom_768.csv  feature_final_readrandomwriterandom_800.csv  feature_final_readrandomwriterandom_832.csv  feature_final_readrandomwriterandom_864.csv  feature_final_readrandomwriterandom_896.csv  feature_final_readrandomwriterandom_928.csv  feature_final_readrandomwriterandom_96.csv  feature_final_readrandomwriterandom_960.csv  feature_final_readrandomwriterandom_992.csv
ml-models-analyses/readahead-per-disk/nn_arch_data/: input.csv  linear0_bias.csv  linear0_w.csv  linear1_bias.csv  linear1_w.csv  linear2_bias.csv  linear2_w.csv  mean.csv  output.csv  stddev.csv
ml-models-analyses/readahead-per-disk/online_nn_arch_data/: input.csv  linear0_bias.csv  linear0_w.csv  linear1_bias.csv  linear1_w.csv  linear2_bias.csv  linear2_w.csv  mean.csv  output.csv  stddev.csv
ml-models-analyses/readahead-per-disk/test_data/: result1024_data.csv  result128_data.csv  result160_data.csv  result192_data.csv  result1_data.csv  result224_data.csv  result256_data.csv  result288_data.csv  result320_data.csv  result32_data.csv  result352_data.csv  result384_data.csv  result416_data.csv  result448_data.csv  result480_data.csv  result512_data.csv  result544_data.csv  result576_data.csv  result608_data.csv  result640_data.csv  result64_data.csv  result672_data.csv  result704_data.csv  result736_data.csv  result768_data.csv  result800_data.csv  result832_data.csv  result864_data.csv  result896_data.csv  result928_data.csv  result960_data.csv  result96_data.csv  (+35 more)
src/: kml_kernel.c
src/autodiff/: autodiff.c
src/decision-tree/: decision_tree.c
src/functions/: binary_cross_entropy_loss.c  cross_entropy_loss.c  loss.c  square_loss.c
src/layers/: layers.c  linear.c  sigmoid.c
src/lib/: kml_lib.c  kml_memory_allocator.c
src/math/: linear_algebra.c  math.c  matrix.c
src/models/: linear_regression.c  model.c  nfs_net_classification.c  nfs_net_data.c  readahead_net.c  readahead_net_classification.c  readahead_net_data.c  xor_net.c
src/optimizers/: sgd_optimizer.c
src/utility/: utility.c
test/: test_cross_entropy.cpp  test_layers.cpp  test_linear_algebra.cpp  test_math.cpp  test_matrix.cpp  test_memory_allocator.cpp
(+5 files in other folders)
